--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "kinachan <army1102@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "0.17.4"
   },
   "scripts": {
     "start": "npx json-server --watch db.json -p 7878"
